RESOLVED FIXED138643
Action menu hit testing is not working properly with all WK1 apps
https://bugs.webkit.org/show_bug.cgi?id=138643
Summary Action menu hit testing is not working properly with all WK1 apps
Beth Dakin
Reported 2014-11-11 17:26:18 PST
Action menu hit testing is not working properly with all WK1 apps
Attachments
Patch (1.99 KB, patch)
2014-11-11 17:28 PST, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2014-11-11 17:28:23 PST
Beth Dakin
Comment 2 2014-11-11 17:29:58 PST
Note You need to log in before you can comment on or make changes to this bug.