Action menu hit testing is not working properly with all WK1 apps https://bugs.webkit.org/show_bug.cgi?id=138643 -and corresponding- rdar://problem/18949376

Reviewed by Tim Horton.

* WebView/WebActionMenuController.mm:
(-[WebActionMenuController prepareForMenu:withEvent:]):
(-[WebActionMenuController _lookupText:]):



Canonical link: https://commits.webkit.org/156481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175996 268f45cc-cd09-0410-ab3c-d52691b4dbfc